<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="me.ceo.bitch.appathon.PersonProfileActivity">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="450dp"
        android:id="@+id/place_pic"
        android:src="@drawable/palika"
        android:scaleType="center"/>

    <TextView
        android:id="@+id/placename"
        android:text="@string/place_name"
        android:textSize="15dp"
        android:paddingLeft="130dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingRight="10dp"
        android:layout_alignParentTop="true"
        android:textColor="#000000"
        android:background="@drawable/edit_text_background"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/databar"
        android:layout_marginTop="423dp"
        android:padding="15dp"
        android:background="@drawable/edit_text_background"
        android:text="@string/hello_world"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="15dp">

            <TextView
                android:id="@+id/reviews"
                android:text="@string/reviews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/numreviews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/reviews"
                android:text="0"/>

        </LinearLayout>




        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:paddingLeft="15dp"
            android:paddingRight="15dp">
            <TextView
                android:id="@+id/followers"
                android:text="@string/followers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <TextView
                android:id="@+id/photos"
                android:text="@string/photos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <TextView
                android:id="@+id/places"
                android:text="@string/places"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/map"
        android:text="See on Google Map"
        android:textColor="#ffffff"
        android:textSize="20dp"
        android:layout_alignParentBottom="true"
        android:background="@color/orange"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>
