<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="me.ceo.bitch.appathon.PersonProfileActivity">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="400dp"
        android:id="@+id/profile_pic"
        android:src="@drawable/profile_pic"
        android:scaleType="center"/>

    <TextView
        android:id="@+id/username"
        android:text="@string/angel"
        android:textSize="15dp"
        android:paddingTop="10dp"
        android:gravity="center"
        android:paddingBottom="20dp"
        android:layout_marginBottom="42dp"
        android:layout_alignParentBottom="true"
        android:textColor="#000000"
        android:background="@drawable/edit_text_background"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/databar"
        android:padding="15dp"
        android:background="@drawable/edit_text_background"
        android:text="@string/hello_world"
        android:layout_width="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:id="@+id/reviews"
                android:text="@string/reviews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/numreviews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/reviews"
                android:text=" 3"/>

        </LinearLayout>




        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:paddingLeft="10dp"
            android:paddingRight="10dp">
            <TextView
                android:id="@+id/followers"
                android:text="@string/followers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/numfollowers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/followers"
                android:text=" 2"/>
        </LinearLayout>



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:id="@+id/photos"
                android:text="@string/photos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


            <TextView
                android:id="@+id/numphotos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/photos"
                android:text=" 9"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:id="@+id/places"
                android:text="@string/places"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/numplaces"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/places"
                android:text=" 0"/>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
